forcing commit